--- a/connector-definition/.hasura-connector/connector-metadata.yaml
+++ b/connector-definition/.hasura-connector/connector-metadata.yaml
@@ -1,6 +1,6 @@
 packagingDefinition:
   type: PrebuiltDockerImage
-  dockerImage: ghcr.io/hasura/ndc-stripe:v0.1.1
+  dockerImage: ghcr.io/hasura/ndc-stripe:{{VERSION}}
 supportedEnvironmentVariables:
   - STRIPE_SERVER_URL
   - STRIPE_BASIC_AUTH_TOKEN
