remove tags push

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,8 +1,8 @@
 name: Release container definition
 on:
   push:
-    # tags:
-    #   - "*"
+    tags:
+      - "*"
 
 env:
   DOCKER_REGISTRY: ghcr.io
