upgrade ndc-rest v0.2.1

--- a/connector-definition/.hasura-connector/connector-metadata.yaml
+++ b/connector-definition/.hasura-connector/connector-metadata.yaml
@@ -13,5 +13,5 @@ commands: {}
 dockerComposeWatch:
   # copy config files into the existing container and restart it
   - path: ./config
-    target: /config
+    target: /etc/connector
     action: sync+restart
