--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,7 @@ services:
       STRIPE_SERVER_URL: ${STRIPE_SERVER_URL}
       STRIPE_BASIC_AUTH_TOKEN: ${STRIPE_BASIC_AUTH_TOKEN}
       STRIPE_BEARER_AUTH_TOKEN: ${STRIPE_BEARER_AUTH_TOKEN}
+      STRIPE_STRINGIFY_JSON: ${STRIPE_STRINGIFY_JSON}
       HASURA_LOG_LEVEL: debug
 
   stripe-mock:
