--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - ./config:/etc/connector:ro
     depends_on:
       stripe-mock:
-        condition: service_started
+        condition: service_healthy
     environment:
       STRIPE_SERVER_URL: ${STRIPE_SERVER_URL}
       STRIPE_BASIC_AUTH_TOKEN: ${STRIPE_BASIC_AUTH_TOKEN}
@@ -21,3 +21,17 @@ services:
     image: stripe/stripe-mock:v0.193.0
     ports:
       - "12111-12112:12111-12112"
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "wget",
+          "-qO-",
+          "--header",
+          "Authorization: Bearer sk_test_123",
+          "http://localhost:12111/v1/account",
+        ]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
