--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,6 +10,7 @@ concurrency:
   mutation: 1
   http: 1
 runtime:
+  enableRawRequest: false
   stringifyJson:
     env: STRIPE_STRINGIFY_JSON
 files:
